header alignmet fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1205,7 +1205,7 @@ img {
 
 .main-header__btn {
   color: var(--paroti-black, #144047);
-  font-size: 24px;
+  font-size: 18px;
   -webkit-transition: all 500ms ease;
   transition: all 500ms ease;
 }
@@ -1215,7 +1215,7 @@ img {
 }
 
 .main-header__btn+.main-header__btn {
-  margin-left: 30px;
+  margin-left: 20px;
 }
 
 .main-header__toggler {
@@ -1537,13 +1537,13 @@ img {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    margin-left: 155px;
+    margin-left: 15px;
   }
 }
 
 .main-menu__list>li {
   position: relative;
-  padding: 38px 0;
+  padding: 40px 0;
 }
 
 .main-menu__list>li+li {
